# rust-fullstack-template

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
server/: .env  Cargo.toml  build.rs
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
web/: Cargo.toml  index.html
web/src/: lib.rs  utils.rs
